--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <h1>Mon super site</h1>
+    <h2>Mon super titre 2</h2>
+    <h3>Mon super titre 3</h3>
+    <h4>Mon super titre 4</h4>
 </body>
 </html>
